Fixed grid layout problems. Added Data Analytics skill to home page

--- a/portfolio.css
+++ b/portfolio.css
@@ -23,7 +23,6 @@ body {
 .main {
    max-width: 1150px;
    margin: 0 auto;
-
    background-color: #FFFFFF;
 }
 
@@ -39,6 +38,10 @@ h2 {
    font-weight: 100;
 }
 
+h4 {
+   padding: 0 30px;
+}
+
 /* Grid */
 
 .grid-container {
@@ -48,14 +51,6 @@ h2 {
 
 .grid-container > div {
   text-align: center;
-}
-
-.item4, .item5, .item6, .item7, .item8, .item9, .item10  {
-   padding: 10px;
-}
-
-.item4, .item5 {
-   padding: 50px 0 30px 0;
 }
 
 .aboutme {
@@ -146,13 +141,14 @@ figcaption {
 }
 
 .LI-badge {
-  padding: 30px 50%;
-  
+  padding: 30px 50px;
+  justify-content: center;
+  text-align: center;
 }
 
 .blog_heading {
   padding:30px;
-  text-align: left;
+  text-align: center;
 }
 
 .blog_entry {
@@ -258,31 +254,56 @@ footer img {
 @media screen and (min-width: 880px) {
    .grid-container {
      display: grid;
-     grid-template-columns: auto auto;
+     grid-template-columns: auto auto auto auto auto;
+     align-content: center;
    }
 
    .grid-container > div {
      text-align: center;
    }
 
-   .item1 {
-     grid-area: 1 / 1 / 1 / 3;
-     padding: 50px;
-   }
+    .item1 {
+      grid-area: 1 / 1 / 1 / 5;
+      padding: 50px;
+    }
+    
+    .item2 {
+      grid-area: 2 / 1 / 2 / 5;
+    }
+    
+    .item3 {
+      grid-area: 3 / 1 / 3 / 5;
+    }
 
-   .item2 {
-     grid-area: 2 / 1 / 2 / 3;
-   }
-
-   .item3 {
-     grid-area: 3 / 1 / 3 / 3;
-   }
-
-   .item4, .item5, .item6, .item7, .item8, .item9, .item10  {
+    .item4 {
+      grid-area: 4 / 1 / 4 / 3;
+    }
+    
+    .item5 {
+      grid-area: 4 / 3 / 4 / 5;
+    }
+  
+    .item6 {
+      grid-area: 5 / 1 / 5 / 3;
+    }  
+  
+    .item7 {
+      grid-area: 5 / 3 / 5 / 5;
+    }  
+    
+    .item8 {
+      grid-area: 6 / 2 / 6 / 4;
+    }  
+    
+    .item9 {
+      grid-area: 7 / 2 / 7 / 4;
+    }  
+  
+   .item4, .item5, .item6, .item7 {
       padding: 10px;
    }
 
-   .item4, .item5 {
+   .item4, .item5, .item8 {
       padding: 50px 0 30px 0;
    }
 
